--- a/statics/css/style.scss
+++ b/statics/css/style.scss
@@ -8,6 +8,8 @@
 @import "pages/index";
 
 @import "pages/base";
+@import "pages/form";
 @import "pages/search";
 @import "pages/mypage";
 @import "pages/registration";
+@import "pages/edit";
